--- a/helloworld-client.vcxproj
+++ b/helloworld-client.vcxproj
@@ -157,7 +157,17 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="packages\StormancerClient.Native.140.1.0.6\build\native\StormancerClient.Native.140.targets" Condition="Exists('packages\StormancerClient.Native.140.1.0.6\build\native\StormancerClient.Native.140.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\StormancerClient.Native.140.1.0.6\build\native\StormancerClient.Native.140.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\StormancerClient.Native.140.1.0.6\build\native\StormancerClient.Native.140.targets'))" />
+  </Target>
 </Project>
